Fri Feb  5 12:10:58 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/docs/TestCoverage.ods:
          Added new tests.

        * connectors/dds4ccm/tests/CSLSampleRejected/Receiver/CSL_SRTest_Receiver_exec.h:
        * connectors/dds4ccm/tests/CSLSampleRejected/Receiver/CSL_SRTest_Receiver_exec.cpp:
          Tested thread switch for ConnectorStatusListener.

        * connectors/dds4ccm/tests/ListenOneByOne/Receiver/LOBO_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/ListenOneByOne/Receiver/LOBO_Test_Receiver_exec.cpp:
          Tested thread switch for ReaderListener.

Fri Feb  5 10:07:39 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DDSCallbackStatusHandler.h:
        * connectors/dds4ccm/impl/ndds/DDSCallbackStatusHandler.cpp:
        * connectors/dds4ccm/impl/ndds/PublisherListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/SubscriberListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/TopicListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/ndds_impl.mpc:
        * connectors/dds4ccm/impl/ndds/OnUnexpectedStatusHandler.h:
        * connectors/dds4ccm/impl/ndds/OnUnexpectedStatusHandler.cpp:
          Renamed OnUnexpectedStatusHandler to DDSCallbackStatusHandler.

Fri Feb  5 09:38:48 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DDS_Get_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_Read_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_StateListen_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.h:
        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataReaderStateListener_T.h:
        * connectors/dds4ccm/impl/ndds/DataReaderStateListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/PortStatusListener_T.h: