@@ -13,15 +13,20 @@
 #endif /* ACE_LACKS_PRAGMA_ONCE */
 
 #include "tao/LocalObject.h"
-#include "ace/Task.h"
+#include "ace/OS_NS_Thread.h"
 #include "ace/Reactor.h"
+#include "ace/Task.h"
 
 namespace CIAO_PSL_SampleLost_Receiver_Impl
 {
   typedef ACE_Atomic_Op <TAO_SYNCH_MUTEX, CORBA::Boolean > Atomic_Boolean;
-  
+  typedef ACE_Atomic_Op <TAO_SYNCH_MUTEX, ACE_thread_t > Atomic_ThreadId;
+
   class Receiver_exec_i;
-  
+
+  //============================================================
+  // TestTopic_RawListener_exec_i
+  //============================================================
   class RECEIVER_EXEC_Export TestTopic_RawListener_exec_i
     : public virtual ::CCM_DDS::TestTopic::CCM_Listener,
       public virtual ::CORBA::LocalObject
@@ -40,10 +45,13 @@ namespace CIAO_PSL_SampleLost_Receiver_Impl
     virtual void
     on_many_data (
       const ::TestTopic_Seq & data,
-      const ::CCM_DDS::ReadInfoSeq & info );
+      const ::CCM_DDS::ReadInfoSeq & info);
   };
 
 
+  //============================================================
+  // ConnectorStatusListener_exec_i
+  //============================================================
   class RECEIVER_EXEC_Export ConnectorStatusListener_exec_i
     : public virtual ::CCM_DDS::CCM_ConnectorStatusListener,
       public virtual ::CORBA::LocalObject
@@ -53,24 +61,28 @@ namespace CIAO_PSL_SampleLost_Receiver_Impl
     virtual ~ConnectorStatusListener_exec_i (void);
 
     virtual
-    void on_inconsistent_topic( ::DDS::Topic_ptr the_topic, 
+    void on_inconsistent_topic (::DDS::Topic_ptr the_topic,
                                 const DDS::InconsistentTopicStatus & status);
     virtual
-    void on_requested_incompatible_qos( ::DDS::DataReader_ptr the_reader,
+    void on_requested_incompatible_qos (::DDS::DataReader_ptr the_reader,
                                         const DDS::RequestedIncompatibleQosStatus & status);
     virtual
-    void on_sample_rejected( ::DDS::DataReader_ptr the_reader,
+    void on_sample_rejected (::DDS::DataReader_ptr the_reader,
                              const DDS::SampleRejectedStatus & status);
     virtual
-    void on_offered_deadline_missed( ::DDS::DataWriter_ptr the_writer,
+    void on_offered_deadline_missed (::DDS::DataWriter_ptr the_writer,
                                      const DDS::OfferedDeadlineMissedStatus & status);
     virtual
-    void on_offered_incompatible_qos( ::DDS::DataWriter_ptr the_writer,
+    void on_offered_incompatible_qos (::DDS::DataWriter_ptr the_writer,
                                       const DDS::OfferedIncompatibleQosStatus & status);
     virtual
-    void on_unexpected_status( ::DDS::Entity_ptr the_entity,
+    void on_unexpected_status (::DDS::Entity_ptr the_entity,
                                ::DDS::StatusKind  status_kind);
    };
+
+  //============================================================
+  // read_action_Generator
+  //============================================================
   class read_action_Generator
     : public ACE_Event_Handler
   {
@@ -88,12 +100,20 @@ namespace CIAO_PSL_SampleLost_Receiver_Impl
     Receiver_exec_i &pulse_callback_;
 
   };
+
+  //============================================================
+  // PortStatusListener_exec_i
+  //============================================================
   class RECEIVER_EXEC_Export PortStatusListener_exec_i
     : public virtual ::CCM_DDS::CCM_PortStatusListener,
       public virtual ::CORBA::LocalObject
   {
   public:
-    PortStatusListener_exec_i (Atomic_Boolean &,Atomic_Boolean &, int port_nr);
+    PortStatusListener_exec_i (Atomic_Boolean &,
+                               Atomic_Boolean &,
+                               Atomic_ThreadId &,
+                               Atomic_ThreadId &,
+                               int port_nr);
     virtual ~PortStatusListener_exec_i (void);
 
     virtual void
@@ -109,10 +129,15 @@ namespace CIAO_PSL_SampleLost_Receiver_Impl
   private:
     Atomic_Boolean &sample_port_1_;
     Atomic_Boolean &sample_port_2_;
+    Atomic_ThreadId &thread_id_1_;
+    Atomic_ThreadId &thread_id_2_;
     int port_nr_;
 
   };
 
+  //============================================================
+  // Receiver_exec_i
+  //============================================================
   class RECEIVER_EXEC_Export Receiver_exec_i
     : public virtual Receiver_Exec,
       public virtual ::CORBA::LocalObject
@@ -143,7 +168,7 @@ namespace CIAO_PSL_SampleLost_Receiver_Impl
     virtual void ccm_activate (void);
     virtual void ccm_passivate (void);
     virtual void ccm_remove (void);
-    void read_all(void);
+    void read_all (void);
 
   private:
     ::PSL_SampleLost::CCM_Receiver_Context_var context_;
@@ -152,6 +177,8 @@ namespace CIAO_PSL_SampleLost_Receiver_Impl
     CORBA::ULong rate_;
     Atomic_Boolean sample_port_1_;
     Atomic_Boolean sample_port_2_;
+    Atomic_ThreadId thread_id_listener_1_;
+    Atomic_ThreadId thread_id_listener_2_;
 };
 
   extern "C" RECEIVER_EXEC_Export ::Components::EnterpriseComponent_ptr
